"""
top level module file
"""

module(name = "caprese", version = "0.1.0")

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.36.0", repo_name = "bazel_gazelle")


go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.24.4")
